Atualização do ci.yml do Workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,4 +24,4 @@ jobs:
         run: npm test
 
       - name: Finalizado
-        run: echo "Pipeline concluído!"
+        run: echo "Pipeline concluído! :)"
