--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,8 @@ jobs:
         with:
           node-version: '18'
 
-      - name: Instalar dependências
-        run: npm install
+      #- name: Instalar dependências
+      #  run: npm install
 
       - name: Rodar testes
         run: npm test
