--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,8 +20,8 @@ jobs:
       #- name: Instalar dependências
       #  run: npm install
 
-      - name: Rodar testes
-        run: npm test
+      #- name: Rodar testes
+      #  run: npm test
 
       - name: Finalizado
         run: echo "Pipeline concluído! :)"
